--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     <!-- End Navbar -->
     <!-- START BOTTON SCROLL -->
     <div class="scroll">
-        <span class="up">Up</span>
+        <span class="up">
+            <i class="fas fa-arrow-up"></i>
+        </span>
     </div>
     <!-- END BOTTON SCROLL -->
     <!-- Srart landing -->
